add min votes setting

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,3 +1,4 @@
 en:
   site_settings:
     discourse_debates_enabled: "Enable Debates"
+    discourse_debates_suggestion_min_votes: "Min votes for a Suggestion to become a Debate"
